Managed to run test with java