@@ -2,9 +2,12 @@ package raw.compiler.snapi.truffle;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
+
 import raw.compiler.base.source.Type;
 import raw.compiler.common.source.Exp;
 import raw.compiler.rql2.api.Rql2Arg;
+import raw.compiler.rql2.truffle.TruffleEmitter;
 import raw.runtime.truffle.ExpressionNode;
 import scala.Tuple2;
 import scala.collection.immutable.ListMap;
@@ -17,11 +20,9 @@ public interface TruffleShortEntryExtension extends TruffleEntryExtension {
 
   default ExpressionNode toTruffle(Type type, List<Rql2Arg> args, TruffleEmitter emitter) {
     List<ExpressionNode> orderedArgs =
-        new ArrayList<>(
             args.stream()
-                .filter(a -> a.idn().isEmpty())
-                .map(a -> emitter.recurseExp(a.e()))
-                .toList());
+                    .filter(a -> a.idn().isEmpty())
+                    .map(a -> emitter.recurseExp(a.e())).collect(Collectors.toList());
 
     optionalParamsMap
         .keys()
